# goodasm

./: CMakeLists.txt  Makefile  README.md  Taskfile.yml  galangriscv.cpp  galangriscv.h  galangriscv32.cpp  galangriscv32.h  gamnemonic.cpp  gamnemonic.h  goodasm.cpp  main.cpp
scripts/: build-unidasm.cmd  build-unidasm.sh  ensure_task.cmd  ensure_task.sh  install-sdl2-i386.sh
tests/: Makefile
tests/riscv/: generate_riscv_tests.py  run_tests_summary.sh  test_all_riscv.sh  test_all_riscv_parallel.sh  test_c_extension.sh  test_full_range_validation.sh  test_moderate_validation.sh  test_quick_validation.sh  test_riscv.asm  test_riscv_extensions.sh  test_sample.sh  test_single_instruction.sh
tests/riscv/a-extension/: amoadd.w.asm  amoadd.w.disasm  amoadd_w.asm  amoadd_w.disasm  amoand.w.asm  amoand.w.disasm  amoand_w.asm  amoand_w.disasm  amomax.w.asm  amomax.w.disasm  amomax_w.asm  amomax_w.disasm  amomaxu.w.asm  amomaxu.w.disasm  amomaxu_w.asm  amomaxu_w.disasm  amomin.w.asm  amomin.w.disasm  amomin_w.asm  amomin_w.disasm  amominu.w.asm  amominu.w.disasm  amominu_w.asm  amominu_w.disasm  amoor.w.asm  amoor.w.disasm  amoor_w.asm  amoor_w.disasm  amoswap.w.asm  amoswap.w.disasm  amoswap_w.asm  amoswap_w.disasm  amoxor.w.asm  amoxor.w.disasm  amoxor_w.asm  amoxor_w.disasm  lr.w.asm  lr.w.disasm  lr_w.asm  lr_w.disasm  (+4 more)
tests/riscv/c-extension/: c.add.asm  c.add.disasm  c.addi.asm  c.addi.disasm  c.addi16sp.asm  c.addi16sp.disasm  c.addi4spn.asm  c.addi4spn.disasm  c.and.asm  c.and.disasm  c.andi.asm  c.andi.disasm  c.beqz.asm  c.beqz.disasm  c.bnez.asm  c.bnez.disasm  c.ebreak.disasm  c.j.asm  c.j.disasm  c.jalr.asm  c.jalr.disasm  c.jr.asm  c.jr.disasm  c.li.asm  c.li.disasm  c.lui.asm  c.lui.disasm  c.lw.asm  c.lw.disasm  c.lwsp.asm  c.lwsp.disasm  c.mv.asm  c.mv.disasm  c.or.asm  c.or.disasm  c.slli.asm  c.slli.disasm  c.srai.asm  c.srai.disasm  c.srli.asm  (+79 more)
tests/riscv/d-extension/: fadd.d.asm  fadd.d.disasm  fadd_d.asm  fadd_d.disasm  fclass.d.asm  fclass.d.disasm  fclass_d.asm  fclass_d.disasm  fcvt.d.s.asm  fcvt.d.s.disasm  fcvt.d.w.asm  fcvt.d.w.disasm  fcvt.d.wu.asm  fcvt.d.wu.disasm  fcvt.s.d.asm  fcvt.s.d.disasm  fcvt.w.d.asm  fcvt.w.d.disasm  fcvt.wu.d.asm  fcvt.wu.d.disasm  fcvt_d_s.asm  fcvt_d_s.disasm  fcvt_d_w.asm  fcvt_d_w.disasm  fcvt_d_wu.asm  fcvt_d_wu.disasm  fcvt_s_d.asm  fcvt_s_d.disasm  fcvt_w_d.asm  fcvt_w_d.disasm  fcvt_wu_d.asm  fcvt_wu_d.disasm  fdiv.d.asm  fdiv.d.disasm  fdiv_d.asm  fdiv_d.disasm  feq.d.asm  feq.d.disasm  feq_d.asm  feq_d.disasm  (+60 more)
tests/riscv/f-extension/: fadd.s.asm  fadd.s.disasm  fadd_s.asm  fadd_s.disasm  fclass.s.asm  fclass.s.disasm  fclass_s.asm  fclass_s.disasm  fcvt.s.w.asm  fcvt.s.w.disasm  fcvt.s.wu.asm  fcvt.s.wu.disasm  fcvt.w.s.asm  fcvt.w.s.disasm  fcvt.wu.s.asm  fcvt.wu.s.disasm  fcvt_s_w.asm  fcvt_s_w.disasm  fcvt_s_wu.asm  fcvt_s_wu.disasm  fcvt_w_s.asm  fcvt_w_s.disasm  fcvt_wu_s.asm  fcvt_wu_s.disasm  fdiv.s.asm  fdiv.s.disasm  fdiv_s.asm  fdiv_s.disasm  feq.s.asm  feq.s.disasm  feq_s.asm  feq_s.disasm  fle.s.asm  fle.s.disasm  fle_s.asm  fle_s.disasm  flt.s.asm  flt.s.disasm  flt_s.asm  flt_s.disasm  (+60 more)
tests/riscv/m-extension/: div.asm  div.disasm  divu.asm  divu.disasm  mul.asm  mul.disasm  mulh.asm  mulh.disasm  mulhsu.asm  mulhsu.disasm  mulhu.asm  mulhu.disasm  rem.asm  rem.disasm  remu.asm  remu.disasm
tests/riscv/rv32i/: .disasm  add.asm  add.disasm  addi.asm  addi.disasm  and.asm  and.disasm  andi.asm  andi.disasm  auipc.asm  auipc.disasm  beq.asm  beq.disasm  bge.asm  bge.disasm  bgeu.asm  bgeu.disasm  blt.asm  blt.disasm  bltu.asm  bltu.disasm  bne.asm  bne.disasm  ebreak.asm  ebreak.disasm  ecall.asm  ecall.disasm  fence.asm  fence.disasm  fence.i.disasm  fence_i.asm  jal.asm  jal.disasm  jalr.asm  jalr.disasm  lb.asm  lb.disasm  lbu.asm  lbu.disasm  lh.asm  (+42 more)
tests/riscv/test_harnesses/: test_a_extension.sh  test_c_extension.sh  test_d_extension.sh  test_f_extension.sh  test_m_extension.sh  test_rv32i.sh  test_zicsr_extension.sh
tests/riscv/zicsr-extension/: csrrc.asm  csrrc.disasm  csrrci.asm  csrrci.disasm  csrrs.asm  csrrs.disasm  csrrsi.asm  csrrsi.disasm  csrrw.asm  csrrw.disasm  csrrwi.asm  csrrwi.disasm
